--- a/src/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
+++ b/src/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
@@ -16,14 +16,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Update="Resources\AssertionLocalizaion.resx">
+      <EmbeddedResource Update="Resources\AssertionLocalization.resx">
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>AssertionLocalizaion.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Resources\AssertionLocalizaion.Designer.cs">
+      <Compile Update="Resources\AssertionLocalization.Designer.cs">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
         <DependentUpon>AssertionLocalizaion.resx</DependentUpon>
