:building_construction: Change the sln and props things.

--- a/src/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
+++ b/src/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
@@ -1,11 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <LangVersion>preview</LangVersion>
-        <TargetFrameworks>net9.0;net5.0;net6.0;net8.0;net472;net48</TargetFrameworks>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <Title>Assertion</Title>
+        <Description>Some amazing assertion.</Description>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -28,6 +26,13 @@
         <AutoGen>True</AutoGen>
         <DependentUpon>AssertionLocalizaion.resx</DependentUpon>
       </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
     </ItemGroup>
 
 </Project>
