--- a/src/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
+++ b/src/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
@@ -15,9 +15,16 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
       <EmbeddedResource Update="Resources\AssertionLocalization.resx">
         <Generator>ResXFileCodeGenerator</Generator>
-        <LastGenOutput>AssertionLocalizaion.Designer.cs</LastGenOutput>
+        <LastGenOutput>AssertionLocalization.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
 
@@ -25,15 +32,8 @@
       <Compile Update="Resources\AssertionLocalization.Designer.cs">
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
-        <DependentUpon>AssertionLocalizaion.resx</DependentUpon>
+        <DependentUpon>AssertionLocalization.resx</DependentUpon>
       </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Include="README.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
     </ItemGroup>
 
 </Project>
