--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,9 +3,49 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
-        <TargetFrameworks>net5.0;net6.0;net7.0;net8.0;net9.0;net472;net48</TargetFrameworks>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
         <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/ArchiDog1998/ArchiToolkit</RepositoryUrl>
+        <IsTestProject>$(MSBuildProjectDirectory.Contains('\tests\'))</IsTestProject>
+        <IsRoslynProject>$(MSBuildProjectDirectory.Contains('\analyzers\'))</IsRoslynProject>
     </PropertyGroup>
+
+    <PropertyGroup Condition="!($(IsTestProject))">
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="$(IsTestProject)">
+        <IsPackable>false</IsPackable>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
+
+    <ItemGroup Condition="!($(IsTestProject))">
+        <None Include="README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
+
+    <PropertyGroup Condition="!($(IsTestProject)) and !($(IsRoslynProject))">
+        <TargetFrameworks>net5.0;net6.0;net7.0;net8.0;net9.0;net472;net48</TargetFrameworks>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="!($(IsTestProject)) and $(IsRoslynProject)">
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+        <IsRoslynComponent>true</IsRoslynComponent>
+    </PropertyGroup>
+
+    <ItemGroup Condition="!($(IsTestProject)) and !($(IsRoslynProject))">
+        <PackageReference Include="PolySharp" Version="1.15.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup Condition="!($(IsTestProject)) and $(IsRoslynProject)">
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+    </ItemGroup>
 </Project>
