:building_construction: change the folder framework.

--- a/Tests/ArchiToolkit.Assertions.Tests/ArchiToolkit.Assertions.Tests.csproj
+++ b/Tests/ArchiToolkit.Assertions.Tests/ArchiToolkit.Assertions.Tests.csproj
@@ -4,6 +4,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\ArchiToolkit.Assertions\ArchiToolkit.Assertions.csproj"/>
+        <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Assertions\ArchiToolkit.Assertions.csproj"/>
     </ItemGroup>
 </Project>
