--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,12 +7,10 @@
         <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/ArchiDog1998/ArchiToolkit</RepositoryUrl>
         <IsTestProject>$(MSBuildProjectDirectory.Contains('\tests\'))</IsTestProject>
-        <IsRoslynProject>$(MSBuildProjectDirectory.Contains('\analyzers\'))</IsRoslynProject>
-    </PropertyGroup>
 
-    <PropertyGroup Condition="!($(IsTestProject))">
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <IsRoslynProject>$(MSBuildProjectDirectory.Contains('\analyzers\'))</IsRoslynProject>
+        <IsApplicationProject>$(MSBuildProjectDirectory.Contains('\applications\'))</IsApplicationProject>
+        <IsLibraryProject>$(MSBuildProjectDirectory.Contains('\libraries\'))</IsLibraryProject>
     </PropertyGroup>
 
     <PropertyGroup Condition="$(IsTestProject)">
@@ -20,32 +18,38 @@
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
-    <ItemGroup Condition="!($(IsTestProject))">
-        <None Include="README.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-    </ItemGroup>
-
-    <PropertyGroup Condition="!($(IsTestProject)) and !($(IsRoslynProject))">
-        <TargetFrameworks>net5.0;net6.0;net7.0;net8.0;net9.0;net472;net48</TargetFrameworks>
+    <PropertyGroup Condition="!$(IsTestProject) and !$(IsApplicationProject)">
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
-    <PropertyGroup Condition="!($(IsTestProject)) and $(IsRoslynProject)">
+    <PropertyGroup Condition="!$(IsTestProject) and $(IsRoslynProject)">
         <TargetFramework>netstandard2.0</TargetFramework>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
     </PropertyGroup>
 
-    <ItemGroup Condition="!($(IsTestProject)) and !($(IsRoslynProject))">
+    <PropertyGroup Condition="!$(IsTestProject) and !$(IsRoslynProject)">
+        <TargetFrameworks>net5.0;net6.0;net7.0;net8.0;net9.0;net472;net48</TargetFrameworks>
+    </PropertyGroup>
+
+    <ItemGroup Condition="!$(IsTestProject) and !$(IsRoslynProject)">
+
         <PackageReference Include="PolySharp" Version="1.15.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
-    <ItemGroup Condition="!($(IsTestProject)) and $(IsRoslynProject)">
+    <ItemGroup Condition="!$(IsTestProject) and !$(IsApplicationProject)">
+        <None Include="README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup Condition="!$(IsTestProject) and $(IsRoslynProject)">
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0"/>
     </ItemGroup>
 </Project>
