--- a/Tests/ArchiToolkit.PureConst.Tests/ArchiToolkit.PureConst.Tests.csproj
+++ b/Tests/ArchiToolkit.PureConst.Tests/ArchiToolkit.PureConst.Tests.csproj
@@ -1,4 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+      <RootNamespace>ArchiToolkit.Pure.Tests</RootNamespace>
+    </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit" Version="1.1.1"/>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit" Version="1.1.1"/>
@@ -11,7 +14,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\analyzers\ArchiToolkit.Pure\ArchiToolkit.Pure.csproj"/>
-        <ProjectReference Include="..\..\src\ArchiToolkit.Pure\ArchiToolkit.Pure.csproj"/>
+        <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.PureConst\ArchiToolkit.PureConst.csproj" />
     </ItemGroup>
 </Project>
