--- a/src/analyzers/ArchiToolkit.PureConst/ArchiToolkit.PureConst.csproj
+++ b/src/analyzers/ArchiToolkit.PureConst/ArchiToolkit.PureConst.csproj
@@ -4,6 +4,7 @@
         <Title>Pure</Title>
         <Description>Check the method for pure</Description>
         <Version>0.9.0</Version>
+        <RootNamespace>ArchiToolkit.Pure</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
