Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,5 +3,5 @@ files:
     translation: /ArchiToolkit.Analyzer/Resources/DiagnosticStrings.%two_letters_code%.resx
   - source: ArchiToolkit.Analyzer/Resources/CodeFixerStrings.resx
     translation: /ArchiToolkit.Analyzer/Resources/DiagnosticStrings.%two_letters_code%.resx
-  - source: src/ArchiToolkit.Assertions/Resources/AssertionLocalization.resx
-    translation: /src/ArchiToolkit.Assertions/Resources/AssertionLocalization.%two_letters_code%.resx
+  - source: src/libraries/ArchiToolkit.Assertions/Resources/AssertionLocalization.resx
+    translation: /src/libraries/ArchiToolkit.Assertions/Resources/AssertionLocalization.%two_letters_code%.resx
