--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: src/libraries/ArchiToolkit.Assertions/Resources/AssertionLocalization.resx
     translation: /src/libraries/ArchiToolkit.Assertions/Resources/AssertionLocalization.%two_letters_code%.resx
+  - source: src/applications/ArchiToolkit.CppInteropGenerator/Resources/ApplicationLocalization.resx
+    translation: /src/applications/ArchiToolkit.CppInteropGenerator/Resources/ApplicationLocalization.%two_letters_code%.resx
