--- a/src/applications/ArchiToolkit.CppInteropGenerator/ArchiToolkit.CppInteropGenerator.csproj
+++ b/src/applications/ArchiToolkit.CppInteropGenerator/ArchiToolkit.CppInteropGenerator.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
         <PackageReference Include="WPF-UI" Version="4.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1"/>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
