--- a/src/applications/ArchiToolkit.CppInteropGenerator/ArchiToolkit.CppInteropGenerator.csproj
+++ b/src/applications/ArchiToolkit.CppInteropGenerator/ArchiToolkit.CppInteropGenerator.csproj
@@ -47,7 +47,7 @@
 
     <ItemGroup>
       <EmbeddedResource Update="Resources\ApplicationLocalization.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>ApplicationLocalization.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
