--- a/src/libraries/ArchiToolkit.Assertions.Logging/ArchiToolkit.Assertions.Logging.csproj
+++ b/src/libraries/ArchiToolkit.Assertions.Logging/ArchiToolkit.Assertions.Logging.csproj
@@ -3,15 +3,16 @@
     <PropertyGroup>
         <Title>Assertion.Logging</Title>
         <Description>To make assertions to the logging.</Description>
-        <Version>0.9.0</Version>
     </PropertyGroup>
-
+    
+    <Import Project="..\ArchiToolkit.Assertions.props"/>
+    
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ArchiToolkit.Assertions\ArchiToolkit.Assertions.csproj" />
+        <ProjectReference Include="..\ArchiToolkit.Assertions\ArchiToolkit.Assertions.csproj"/>
     </ItemGroup>
-
+    
 </Project>
