--- a/src/libraries/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
+++ b/src/libraries/ArchiToolkit.Assertions/ArchiToolkit.Assertions.csproj
@@ -2,8 +2,9 @@
     <PropertyGroup>
         <Title>Assertion</Title>
         <Description>Some amazing assertion.</Description>
-        <Version>0.9.3</Version>
     </PropertyGroup>
+
+    <Import Project="..\ArchiToolkit.Assertions.props"/>
 
     <ItemGroup>
         <EmbeddedResource Update="Resources\AssertionLocalization.resx">
