--- a/src/libraries/ArchiToolkit.Assertions.Logging/ArchiToolkit.Assertions.Logging.csproj
+++ b/src/libraries/ArchiToolkit.Assertions.Logging/ArchiToolkit.Assertions.Logging.csproj
@@ -5,7 +5,7 @@
         <Description>To make assertions to the logging.</Description>
     </PropertyGroup>
     
-    <Import Project="..\ArchiToolkit.Assertions.props"/>
+    <Import Project="..\..\ArchiToolkit.Assertions.props"/>
     
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0"/>
