--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project>
     <PropertyGroup>
+        <Version>0.9.6</Version>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
-
         <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
         <RepositoryUrl>https://github.com/ArchiDog1998/ArchiToolkit</RepositoryUrl>
         <IsTestProject>$(MSBuildProjectDirectory.Contains('\tests\'))</IsTestProject>
