--- a/.github/workflows/nuke.yml
+++ b/.github/workflows/nuke.yml
@@ -19,9 +19,9 @@ name: nuke
 on: [push]
 
 jobs:
-  windows-latest:
-    name: windows-latest
-    runs-on: windows-latest
+  ubuntu-latest:
+    name: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: 'Cache: .nuke/temp, ~/.nuget/packages'
