:tada: A new project for interpolated parsing! work in progress.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,7 +16,7 @@
         <NeedRoslyn>False</NeedRoslyn>
         <NeedRoslyn Condition="!$(IsTestProject) and $(IsRoslynProject)">True</NeedRoslyn>
         <NeedAlmostAllFrameWorks>False</NeedAlmostAllFrameWorks>
-        <NeedAlmostAllFrameWorks Condition="!$(IsTestProject) and $(IsLibraryProject)">True</NeedAlmostAllFrameWorks>
+        <NeedAlmostAllFrameWorks Condition="!$(IsTestProject) and $(IsLibraryProject) and !$(MSBuildProjectName.EndsWith('RoslynHelper'))">True</NeedAlmostAllFrameWorks>
         <NeedTestsPackage>False</NeedTestsPackage>
         <NeedTestsPackage Condition="$(IsTestProject)">True</NeedTestsPackage>
     </PropertyGroup>
