--- a/src/analyzers/ArchiToolkit.PureConst.Analyzer/ArchiToolkit.PureConst.Analyzer.csproj
+++ b/src/analyzers/ArchiToolkit.PureConst.Analyzer/ArchiToolkit.PureConst.Analyzer.csproj
@@ -13,4 +13,8 @@
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj" />
+    </ItemGroup>
 </Project>
