--- a/src/libraries/ArchiToolkit.PureConst/ArchiToolkit.PureConst.csproj
+++ b/src/libraries/ArchiToolkit.PureConst/ArchiToolkit.PureConst.csproj
@@ -3,9 +3,10 @@
     <PropertyGroup>
         <Title>Pure Const</Title>
         <Description>Check the method for pure and the const thing</Description>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
         <None Include="..\..\analyzers\ArchiToolkit.PureConst.Analyzer\bin\$(Configuration)\netstandard2.0\ArchiToolkit.PureConst.Analyzer.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <None Include="..\..\analyzers\ArchiToolkit.PureConst.Analyzer\bin\$(Configuration)\netstandard2.0\ArchiToolkit.RoslynHelper.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     </ItemGroup>
 </Project>
