--- a/src/libraries/ArchiToolkit.InterpolatedParser/ArchiToolkit.InterpolatedParser.csproj
+++ b/src/libraries/ArchiToolkit.InterpolatedParser/ArchiToolkit.InterpolatedParser.csproj
@@ -3,9 +3,10 @@
     <PropertyGroup>
         <Title>Interpolated Parser</Title>
         <Description>Check the method for pure and the const thing</Description>
-        <TargetFrameworks>net7.0;net8.0;net9.0</TargetFrameworks>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     </PropertyGroup>
-
+    <ItemGroup>
+        <None Include="..\..\analyzers\ArchiToolkit.PureConst.Analyzer\bin\$(Configuration)\netstandard2.0\ArchiToolkit.PureConst.Analyzer.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <None Include="..\..\analyzers\ArchiToolkit.PureConst.Analyzer\bin\$(Configuration)\netstandard2.0\ArchiToolkit.RoslynHelper.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+    </ItemGroup>
 </Project>
