--- a/src/analyzers/ArchiToolkit.InterpolatedParser.SourceGenerator/ArchiToolkit.InterpolatedParser.SourceGenerator.csproj
+++ b/src/analyzers/ArchiToolkit.InterpolatedParser.SourceGenerator/ArchiToolkit.InterpolatedParser.SourceGenerator.csproj
@@ -4,7 +4,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="..\..\libraries\ArchiToolkit.InterpolatedParser.Sources\*.cs"/>
+        <EmbeddedResource Include="..\..\libraries\ArchiToolkit.InterpolatedParser.Sources\*.cs"
+                          Exclude="..\..\libraries\ArchiToolkit.InterpolatedParser.Sources\Program.cs"/>
         <ProjectReference Include="..\..\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj"/>
     </ItemGroup>
 </Project>
