--- a/src/libraries/ArchiToolkit.InterpolatedParser.Sources/ArchiToolkit.InterpolatedParser.Sources.csproj
+++ b/src/libraries/ArchiToolkit.InterpolatedParser.Sources/ArchiToolkit.InterpolatedParser.Sources.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <RootNamespace>ArchiToolkit.InterpolatedParser</RootNamespace>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
