--- a/src/libraries/ArchiToolkit.InterpolatedParser/ArchiToolkit.InterpolatedParser.csproj
+++ b/src/libraries/ArchiToolkit.InterpolatedParser/ArchiToolkit.InterpolatedParser.csproj
@@ -6,8 +6,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
-        <None Include="..\..\analyzers\ArchiToolkit.PureConst.Analyzer\bin\$(Configuration)\netstandard2.0\ArchiToolkit.PureConst.Analyzer.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
-        <None Include="..\..\analyzers\ArchiToolkit.PureConst.Analyzer\bin\$(Configuration)\netstandard2.0\ArchiToolkit.RoslynHelper.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+        <None Include="..\..\analyzers\ArchiToolkit.InterpolatedParser.SourceGenerator\bin\$(Configuration)\netstandard2.0\ArchiToolkit.InterpolatedParser.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+        <None Include="..\..\libraries\ArchiToolkit.RoslynHelper\bin\$(Configuration)\netstandard2.0\ArchiToolkit.RoslynHelper.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
     </ItemGroup>
     <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0"/>
