--- a/src/libraries/ArchiToolkit.Fluent/ArchiToolkit.Fluent.csproj
+++ b/src/libraries/ArchiToolkit.Fluent/ArchiToolkit.Fluent.csproj
@@ -4,4 +4,9 @@
         <Title>Fluent</Title>
         <Description>Make your API Fluent</Description>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\..\analyzers\ArchiToolkit.Fluent.SourceGenerator\bin\$(Configuration)\netstandard2.0\ArchiToolkit.Fluent.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+        <None Include="..\..\libraries\ArchiToolkit.RoslynHelper\bin\$(Configuration)\netstandard2.0\ArchiToolkit.RoslynHelper.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+    </ItemGroup>
 </Project>
