--- a/Tests/ArchiToolkit.Fluent.Tests/ArchiToolkit.Fluent.Tests.csproj
+++ b/Tests/ArchiToolkit.Fluent.Tests/ArchiToolkit.Fluent.Tests.csproj
@@ -7,5 +7,6 @@
         <PackageReference Include="TUnit" Version="0.10.26"/>
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.Fluent.SourceGenerator\ArchiToolkit.Fluent.SourceGenerator.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Fluent\ArchiToolkit.Fluent.csproj" />
+        <ProjectReference Include="..\..\src\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj" OutputItemType="analyzer"  />
     </ItemGroup>
 </Project>
