:recycle: Reduce the method input counts

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -30,6 +30,7 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <Authors>ArchiTed</Authors>
     </PropertyGroup>
 
     <ItemGroup Condition="$(NeedPackage)">
