--- a/Tests/ArchiToolkit.Assertions.Tests/ArchiToolkit.Assertions.Tests.csproj
+++ b/Tests/ArchiToolkit.Assertions.Tests/ArchiToolkit.Assertions.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <PackageReference Include="TUnit" Version="0.10.26"/>
+        <PackageReference Include="TUnit"/>
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Assertions\ArchiToolkit.Assertions.csproj"/>
     </ItemGroup>
 </Project>
