--- a/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
+++ b/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
@@ -15,8 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
-      <PackageReference Include="Seq.Extensions.Logging" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console"/>
+      <PackageReference Include="Seq.Extensions.Logging"/>
     </ItemGroup>
 
 </Project>
