--- a/Tests/ArchiToolkit.Fluent.Tests/ArchiToolkit.Fluent.Tests.csproj
+++ b/Tests/ArchiToolkit.Fluent.Tests/ArchiToolkit.Fluent.Tests.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="TUnit" Version="0.10.26"/>
+        <PackageReference Include="TUnit"/>
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.Fluent.SourceGenerator\ArchiToolkit.Fluent.SourceGenerator.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Fluent\ArchiToolkit.Fluent.csproj" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj" OutputItemType="analyzer"  />
