--- a/Tests/ArchiToolkit.InterpolatedParser.Tests/ArchiToolkit.InterpolatedParser.Tests.csproj
+++ b/Tests/ArchiToolkit.InterpolatedParser.Tests/ArchiToolkit.InterpolatedParser.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <PackageReference Include="TUnit" Version="0.10.26"/>
+        <PackageReference Include="TUnit"/>
       <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.InterpolatedParser.SourceGenerator\ArchiToolkit.InterpolatedParser.SourceGenerator.csproj"  OutputItemType="analyzer" />
       <ProjectReference Include="..\..\src\libraries\ArchiToolkit.InterpolatedParser\ArchiToolkit.InterpolatedParser.csproj" />
       <ProjectReference Include="..\..\src\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj"  OutputItemType="analyzer" />
