:building_construction: Better way to organize the tests projects.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -26,6 +26,10 @@
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup Condition="$(NeedTestsPackage)">
+        <PackageReference Include="TUnit" />
+    </ItemGroup>
+
     <PropertyGroup Condition="$(NeedPackage)">
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
