--- a/Tests/ArchiToolkit.PureConst.Tests/ArchiToolkit.PureConst.Tests.csproj
+++ b/Tests/ArchiToolkit.PureConst.Tests/ArchiToolkit.PureConst.Tests.csproj
@@ -3,14 +3,7 @@
       <RootNamespace>ArchiToolkit.Pure.Tests</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
-        <PackageReference Include="xunit"/>
-        <PackageReference Include="xunit.runner.visualstudio">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" />
     </ItemGroup>
 
     <ItemGroup>
