--- a/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.targets
+++ b/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.targets
@@ -7,15 +7,7 @@
         <Exec Command="&quot;$(BeforeBuildPath)&quot; &quot;$(MSBuildProjectDirectory)&quot;" />
     </Target>
 
-    <ItemGroup>
-        <EmbeddedResource Update="l10n\ArchiToolkit.Resources.resx">
-            <Generator>ResXFileCodeGenerator</Generator>
-            <LastGenOutput>ArchiToolkit.Resources.Designer.cs</LastGenOutput>
-        </EmbeddedResource>
-        <Compile Update="l10n\ArchiToolkit.Resources.Designer.cs">
-            <DesignTime>True</DesignTime>
-            <AutoGen>True</AutoGen>
-            <DependentUpon>ArchiToolkit.Resources.resx</DependentUpon>
-        </Compile>
-    </ItemGroup>
+    <PropertyGroup Condition="'$(KeepArchiToolkitAttributes)' == 'true'">
+        <DefineConstants>$(DefineConstants);KEEP_ARCHITOOLKIT_ATTRIBUTES</DefineConstants> <!-- Define the symbol if true -->
+    </PropertyGroup>
 </Project>
