--- a/src/analyzers/ArchiToolkit.Grasshopper.SourceGenerator/ArchiToolkit.Grasshopper.SourceGenerator.csproj
+++ b/src/analyzers/ArchiToolkit.Grasshopper.SourceGenerator/ArchiToolkit.Grasshopper.SourceGenerator.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
+        <EmbeddedResource Include="..\..\libraries\ArchiToolkit.Grasshopper.Sources\*.cs"
+                          Exclude="..\..\libraries\ArchiToolkit.Grasshopper.Sources\Program.cs"
+                          Visible="false"/>
         <ProjectReference Include="..\..\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj"/>
     </ItemGroup>
 </Project>
