:construction: Some basic things changing.

--- a/Tests/ArchiToolkit.Grasshopper.Instance/ArchiToolkit.Grasshopper.Instance.csproj
+++ b/Tests/ArchiToolkit.Grasshopper.Instance/ArchiToolkit.Grasshopper.Instance.csproj
@@ -17,4 +17,12 @@
     <Target Name="RunExeBeforeBuild" BeforeTargets="BeforeBuild">
         <Exec Command="&quot;..\..\src\applications\ArchiToolkit.Grasshopper.BeforeBuild\bin\$(Configuration)\net9.0\ArchiToolkit.Grasshopper.BeforeBuild.exe&quot; &quot;$(MSBuildProjectDirectory)&quot;" />
     </Target>
+
+    <ItemGroup>
+        <EmbeddedResource Include="Icons/*.png"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="l10n\" />
+    </ItemGroup>
 </Project>
