--- a/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.targets
+++ b/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.targets
@@ -10,4 +10,8 @@
     <PropertyGroup Condition="'$(KeepArchiToolkitAttributes)' == 'true'">
         <DefineConstants>$(DefineConstants);KEEP_ARCHITOOLKIT_ATTRIBUTES</DefineConstants> <!-- Define the symbol if true -->
     </PropertyGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="Icons/*.png"/>
+    </ItemGroup>
 </Project>
