--- a/src/libraries/ArchiToolkit.Grasshopper.Sources/ArchiToolkit.Grasshopper.Sources.csproj
+++ b/src/libraries/ArchiToolkit.Grasshopper.Sources/ArchiToolkit.Grasshopper.Sources.csproj
@@ -3,4 +3,7 @@
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <RootNamespace>ArchiToolkit.Grasshopper</RootNamespace>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="System.Drawing.Common" />
+    </ItemGroup>
 </Project>
