:bug: Make it can be run.

--- a/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.csproj
+++ b/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.csproj
@@ -3,7 +3,7 @@
         <TargetFramework>net48</TargetFramework>
         <Title>Grasshopper</Title>
         <Description>Make your grasshopper development much more easier</Description>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
