--- a/src/libraries/ArchiToolkit.Grasshopper.Sources/ArchiToolkit.Grasshopper.Sources.csproj
+++ b/src/libraries/ArchiToolkit.Grasshopper.Sources/ArchiToolkit.Grasshopper.Sources.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <TargetFramework>net48</TargetFramework>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <RootNamespace>ArchiToolkit.Grasshopper</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
+      <PackageReference Include="Grasshopper" />
       <PackageReference Include="System.Drawing.Common" />
     </ItemGroup>
 </Project>
