--- a/Tests/ArchiToolkit.Grasshopper.Tests/ArchiToolkit.Grasshopper.Tests.csproj
+++ b/Tests/ArchiToolkit.Grasshopper.Tests/ArchiToolkit.Grasshopper.Tests.csproj
@@ -4,6 +4,7 @@
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.Grasshopper.SourceGenerator\ArchiToolkit.Grasshopper.SourceGenerator.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Grasshopper\ArchiToolkit.Grasshopper.csproj" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj" OutputItemType="analyzer"  />
+        <PackageReference Include="Grasshopper" />
         <PackageReference Include="System.Drawing.Common" />
     </ItemGroup>
 </Project>
