--- a/src/applications/ArchiToolkit.Grasshopper.BeforeBuild/ArchiToolkit.Grasshopper.BeforeBuild.csproj
+++ b/src/applications/ArchiToolkit.Grasshopper.BeforeBuild/ArchiToolkit.Grasshopper.BeforeBuild.csproj
@@ -7,7 +7,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
         <PackageReference Include="System.CodeDom" />
     </ItemGroup>
 </Project>
