--- a/Tests/ArchiToolkit.Grasshopper.Instance/ArchiToolkit.Grasshopper.Instance.csproj
+++ b/Tests/ArchiToolkit.Grasshopper.Instance/ArchiToolkit.Grasshopper.Instance.csproj
@@ -8,6 +8,7 @@
         <EnableWindowsTargeting>true</EnableWindowsTargeting>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.CSharp" />
         <ProjectReference Include="..\..\src\analyzers\ArchiToolkit.Grasshopper.SourceGenerator\ArchiToolkit.Grasshopper.SourceGenerator.csproj" OutputItemType="analyzer" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.Grasshopper\ArchiToolkit.Grasshopper.csproj" />
         <ProjectReference Include="..\..\src\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj" OutputItemType="analyzer" />
