:sparkles: Auto get the strings and the icons.

--- a/src/analyzers/ArchiToolkit.Grasshopper.SourceGenerator/ArchiToolkit.Grasshopper.SourceGenerator.csproj
+++ b/src/analyzers/ArchiToolkit.Grasshopper.SourceGenerator/ArchiToolkit.Grasshopper.SourceGenerator.csproj
@@ -6,4 +6,8 @@
                           Visible="false"/>
         <ProjectReference Include="..\..\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Include="Icons/*.png"/>
+    </ItemGroup>
 </Project>
