--- a/src/applications/ArchiToolkit.Grasshopper.BeforeBuild/ArchiToolkit.Grasshopper.BeforeBuild.csproj
+++ b/src/applications/ArchiToolkit.Grasshopper.BeforeBuild/ArchiToolkit.Grasshopper.BeforeBuild.csproj
@@ -6,8 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
-        <PackageReference Include="System.CodeDom" />
+        <EmbeddedResource Include="Icons/*.png"/>
     </ItemGroup>
 </Project>
