--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -56,7 +56,7 @@
     </ItemGroup>
 
     <PropertyGroup Condition="$(NeedAlmostAllFrameWorks) and !$(MSBuildProjectName.EndsWith('Grasshopper'))">
-        <TargetFrameworks>net5.0;net6.0;net7.0;net8.0;net9.0;net472;net48;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net472;net48;netstandard2.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup Condition="$(NeedAlmostAllFrameWorks)">
