--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -55,7 +55,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp"/>
     </ItemGroup>
 
-    <PropertyGroup Condition="$(NeedAlmostAllFrameWorks) and !$(MSBuildProjectName.EndsWith('Grasshopper'))">
+    <PropertyGroup Condition="$(NeedAlmostAllFrameWorks)">
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net472;net48;netstandard2.0</TargetFrameworks>
     </PropertyGroup>
 
