--- a/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.targets
+++ b/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.targets
@@ -1,4 +1,8 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <PropertyGroup Condition="'$(KeepArchiToolkitAttributes)' == 'true'">
+        <DefineConstants>$(DefineConstants);KEEP_ARCHITOOLKIT_ATTRIBUTES</DefineConstants> <!-- Define the symbol if true -->
+    </PropertyGroup>
+
     <ItemGroup>
         <EmbeddedResource Include="Icons/*.png"/>
     </ItemGroup>
