:bug: So make it as a library, that is better.

--- a/src/libraries/ArchiToolkit.Grasshopper.Sources/ArchiToolkit.Grasshopper.Sources.csproj
+++ b/src/libraries/ArchiToolkit.Grasshopper.Sources/ArchiToolkit.Grasshopper.Sources.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net48</TargetFramework>
+        <TargetFrameworks>net48;net7.0</TargetFrameworks>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
         <RootNamespace>ArchiToolkit.Grasshopper</RootNamespace>
         <EnableGlobalUsing>false</EnableGlobalUsing>
