--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -21,6 +21,7 @@
         <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
         <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.2"/>
         <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.0"/>
-        <PackageVersion Include="Grasshopper" Version="7.6.21127.19001"/>
+        <PackageVersion Include="Grasshopper" Version="7.6.21127.19001" Condition="'$(TargetFramework)' == 'net48'"/>
+        <PackageVersion Include="Grasshopper" Version="8.0.23304.9001"  Condition="'$(TargetFramework)' != 'net48'"/>
     </ItemGroup>
 </Project>
