--- a/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.csproj
+++ b/src/libraries/ArchiToolkit.Grasshopper/ArchiToolkit.Grasshopper.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <TargetFrameworks>net48;net7.0</TargetFrameworks>
         <Title>Grasshopper</Title>
         <Description>Make your grasshopper development much more easier</Description>
     </PropertyGroup>
@@ -8,6 +9,6 @@
         <None Include="..\..\analyzers\ArchiToolkit.Grasshopper.SourceGenerator\bin\$(Configuration)\netstandard2.0\ArchiToolkit.Grasshopper.SourceGenerator.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
         <None Include="..\..\libraries\ArchiToolkit.RoslynHelper\bin\$(Configuration)\netstandard2.0\ArchiToolkit.RoslynHelper.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
         <None Include="ArchiToolkit.Grasshopper.targets" Pack="true" PackagePath="build" Visible="false"/>
-        <PackageReference Include="Grasshopper" PrivateAssets="all"/>
+        <PackageReference Include="Grasshopper"/>
     </ItemGroup>
 </Project>
