--- a/src/analyzers/ArchiToolkit.Grasshopper.SourceGenerator/ArchiToolkit.Grasshopper.SourceGenerator.csproj
+++ b/src/analyzers/ArchiToolkit.Grasshopper.SourceGenerator/ArchiToolkit.Grasshopper.SourceGenerator.csproj
@@ -2,7 +2,7 @@
 
     <ItemGroup>
         <EmbeddedResource Include="..\..\libraries\ArchiToolkit.Grasshopper.Sources\*.cs"
-                          Exclude="..\..\libraries\ArchiToolkit.Grasshopper.Sources\Program.cs"
+                          Exclude="..\..\libraries\ArchiToolkit.Grasshopper.Sources\*_Exclude.cs"
                           Visible="false"/>
         <ProjectReference Include="..\..\libraries\ArchiToolkit.RoslynHelper\ArchiToolkit.RoslynHelper.csproj"/>
     </ItemGroup>
