--- a/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
+++ b/Tests/ArchiToolkit.Console/ArchiToolkit.Console.csproj
@@ -26,5 +26,7 @@
         <PackageReference Include="FluentValidation"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Console"/>
         <PackageReference Include="Seq.Extensions.Logging"/>
+        <AdditionalFiles Include="CppInteropGen.ini" />
+
     </ItemGroup>
 </Project>
